--- a/package.json
+++ b/package.json
@@ -8,8 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@types/graphql": "^14.5.0",
+    "apollo-boost": "^0.4.7",
+    "apollo-link-http": "^1.5.16",
+    "apollo-server": "^2.10.1",
+    "apollo-server-micro": "^2.10.1",
+    "graphql": "^14.6.0",
     "next": "9.2.2",
+    "node-fetch": "^2.6.0",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-apollo": "^3.1.3",
+    "react-dom": "16.12.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^0.18.0-beta.10"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-transform-flow-strip-types": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/node": "^13.7.4",
+    "@types/react": "^16.9.22",
+    "babel-plugin-transform-typescript-metadata": "^0.2.2",
+    "typescript": "^3.8.2"
   }
 }
