--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@kiwicom/orbit-components": "^0.75.0",
     "@types/graphql": "^14.5.0",
     "apollo-boost": "^0.4.7",
     "apollo-link-http": "^1.5.16",
@@ -21,6 +22,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "16.12.0",
     "reflect-metadata": "^0.1.13",
+    "styled-components": "^5.0.1",
     "type-graphql": "^0.18.0-beta.10"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@types/node": "^13.7.4",
     "@types/react": "^16.9.22",
+    "@zeit/next-css": "^1.0.1",
     "babel-plugin-transform-typescript-metadata": "^0.2.2",
     "typescript": "^3.8.2"
   }
