--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@kiwicom/orbit-components": "^0.75.0",
     "@types/graphql": "^14.5.0",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
     "apollo-link-http": "^1.5.16",
     "apollo-server": "^2.10.1",
     "apollo-server-micro": "^2.10.1",
     "graphql": "^14.6.0",
+    "isomorphic-fetch": "^2.2.1",
     "next": "9.2.2",
+    "next-with-apollo": "^5.0.0",
     "node-fetch": "^2.6.0",
     "react": "16.12.0",
     "react-apollo": "^3.1.3",
