create a wirecard app while initing the server

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/graphql": "^14.5.0",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
+    "apollo-datasource": "^0.7.0",
+    "apollo-datasource-rest": "^0.8.0",
     "apollo-link-http": "^1.5.16",
     "apollo-server": "^2.10.1",
     "apollo-server-micro": "^2.10.1",
     "graphql": "^14.6.0",
     "isomorphic-fetch": "^2.2.1",
+    "neo4j-driver": "^4.0.2",
     "next": "9.2.2",
     "next-with-apollo": "^5.0.0",
     "node-fetch": "^2.6.0",
