--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-transform-flow-strip-types": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
     "@babel/preset-typescript": "^7.8.3",
     "@types/node": "^13.7.4",
     "@types/react": "^16.9.22",
