--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -11,9 +11,17 @@ jobs:
         with:
           fetch-depth: "0"
       - name: Bump version and push tag
-        uses: mathieudutour/github-tag-action@v4.5
+        uses: TriPSs/conventional-changelog-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: patch
-          release_branches: master
-          tag_prefix: ""
+          github-token: ${{ secrets.GITHUB_TOKEN_ACTION }}
+          git-message: "chore(release): {version}"
+          preset: "angular"
+          tag-prefix: ""
+          output-file: "CHANGELOG.md"
+      # - name: Bump version and push tag
+      #   uses: mathieudutour/github-tag-action@v4.5
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     default_bump: patch
+      #     release_branches: master
+      #     tag_prefix: ""
