--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Bump version and push tag
         uses: TriPSs/conventional-changelog-action@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN_ACTION }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           git-message: "chore(release): {version}"
           preset: "angular"
           tag-prefix: ""
