--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -3,12 +3,16 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - "package.json"
+      - "CHANGELOG.md"
 jobs:
   tag:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: "0"
       - name: Bump version and push tag
         uses: TriPSs/conventional-changelog-action@v2
