--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Bump version and push tag
         uses: TriPSs/conventional-changelog-action@v2
         with:
